# diffrays

./: README.md  pyproject.toml
.github/workflows/: README.md  assign-issues.yml  auto-assign.yml  dependabot.yml  publish.yml  testpypi.yml
Source/0.1/: script.py
Source/0.2/: script.py
Source/0.3/: script.py
Source/0.4/: script.py
Source/0.5/: script.py  script_v2.py
Source/0.6/: cli.py  output.sqlite
Source/0.6/diffrays/: analyzer.py  server.py
Source/0.6/diffrays/templates/: base.html  diff.html  index.html  raw.html
Source/0.7/: output.sqlite
Source/0.7/diffrays/: analyzer.py  database.py  server.py
Source/0.7/diffrays/templates/: base.html  dashboard.html  list.html
Source/0.8/: output.sqlite  requirements.txt
Source/0.8/diffrays/: analyzer.py  database.py  explorer.py  log.py  server.py
Source/0.8/diffrays/templates/: base.html  diff.html  list.html
Source/0.9/: pyproject.toml  requirements.txt
Source/0.9/diffrays/diffrays/: analyzer.py  cli.py  explorer.py  log.py  server.py
Source/0.9/examples/: clfs_5037.sys.id1  clfs_5037.sys.id2  clfs_5037.sys.nam  clfs_5037.sys.til
Source/0.9/examples/CVE-2025-29824/: clfs_10.0.22621.5189.sys
Source/1.0/: README.md
Source/1.1/diffrays/: cli.py  database.py  server.py
Source/1.1/diffrays/templates/: list.html
Source/1.1/examples/CVE-2025-29824/: result_clfs_5037_clfs_5189_20250831_072000.sqlite
Source/1.2/: .gitignore  IMPLEMENTATION_SUMMARY.md  Notes.md  README.md
Source/1.2/diffrays/: analyzer.py  cli.py  database.py  explorer.py  server.py
Source/1.2/diffrays/templates/: index.html  list.html
Source/1.3/diffrays/: analyzer.py  cli.py  explorer.py  log.py  server.py
Source/1.3/diffrays/templates/: base.html  list.html
Source/1.4/diffrays/: cli.py  database.py
Source/1.4/diffrays/templates/: raw.html
Source/1.4/examples/CVE-2025-29824/: result_clfs_5037_clfs_5189_20250923_033209.sqlite
Source/1.5/: automate.py  find-component.py  patch_update_downloader.py  patch_update_downloader_v2.py
diffrays/: __init__.py  analyzer.py  cli.py  correlator.py  database.py  explorer.py  heuristics.py  matcher.py  server.py
diffrays/templates/: base.html  dashboard.html  list.html
examples/CVE-2025-29824/: clfs_10.0.22621.5037.sys
examples/CVE-2025-59514/: mskssrv.sys.10.0.26100.7019  mskssrv.sys.10.0.26100.7171  result_mskssrv.sys.10.0.26100_mskssrv.sys.10.0.26100_20251122_235321.sqlite
examples/CVE-2025-60719/: afd.sys.10.0.26100.7019  afd.sys.10.0.26100.7171
