[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffrays"
version = "0.1.0"
description = "Binary Diff Analysis Tool - Decompile, Compare, and Visualize Binary Changes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "flask>=2.0.0",
    "tqdm>=4.60.0",
]

[project.scripts]
diffrays = "diffrays.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["diffrays"]

[tool.setuptools.package-data]
"diffrays" = [
    "templates/*",
    "static/*"
]


[project.urls]
Homepage = "https://github.com/pwnfuzz/diffrays"
Documentation = "https://github.com/pwnfuzz/diffrays#readme"
Repository = "https://github.com/pwnfuzz/diffrays"
Issues = "https://github.com/pwnfuzz/diffrays/issues"